argocd/whoami2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami2
  labels:
    app: whoami2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami2
  template:
    metadata:
      labels:
        app: whoami2
    spec:
      containers:
      - image: docker.io/traefik/whoami:latest
        name: whoami2
        ports:
        - containerPort: 80
