argocd/whoami2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami2
spec:
  ports:
  - name: whoami2
    port: 80
    targetPort: 80
  selector:
    app: whoami2
