argocd/whoami2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami2-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - whoami2.homelab.bowmans.site
    secretName: whoami2-certificate
  rules:
    - host: whoami2.homelab.bowmans.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami2
                port:
                  number: 80
